generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [pg_trgm]
}

enum Role {
  SALES
  ADMIN
}

enum SellingPointType {
  PHYSICAL
  ONLINE
  CONSIGNMENT
}

enum VariantStatus {
  ACTIVE
  OUT_OF_STOCK
  ARCHIVED
  COMING_SOON
}

enum StockMovementType {
  SALE
  CHECKIN
  RETURN
  ADJUSTMENT
  TRANSFER
  SAMPLE_GIFT
  DAMAGE_LOSS
}

enum PaymentMethod {
  CASH
  CARD
  TRANSFER
  OTHER
}

enum OrderChannel {
  ONLINE
  SALES_POINT
}

enum OrderStatus {
  NEW
  IN_PROGRESS
  READY
  FULFILLED
  CANCELLED
}

enum CashSessionStatus {
  OPEN
  CLOSED
  DISPUTED
}

enum NotificationType {
  NEW_ORDER
  LOW_STOCK
  KACCA_MISMATCH
  INVITE
}

model User {
  id               String   @id @default(cuid())
  email            String   @unique
  passwordHash     String?
  fullName         String
  role             Role     @default(SALES)
  isActive         Boolean  @default(true)
  inviteToken      String?  @unique
  inviteAcceptedAt DateTime?
  createdById      String?
  createdBy        User?    @relation("UserInvites", fields: [createdById], references: [id])
  invitedUsers     User[]   @relation("UserInvites")
  createdAt        DateTime @default(now())

  sales            Sale[]            @relation("SoldBy")
  ordersCreated    Order[]           @relation("OrderCreatedBy")
  movementsBy      StockMovement[]   @relation("MovementBy")
  cashOpens        CashDrawerSession[] @relation("CashOpenBy")
  cashCloses       CashDrawerSession[] @relation("CashCloseBy")
  shifts           CashDrawerSession[] @relation("ShiftUser")
  customersCreated Customer[]        @relation("CustomerCreatedBy")
  inventoryCreated InventoryItem[]   @relation("InventoryCreatedBy")
  notifications    Notification[]
}

model Design {
  id                  String  @id @default(cuid())
  designId            String  @unique
  nameEn              String
  nameHy              String?
  category            String?
  collection          String?
  subcollection       String?
  motif               String?
  culturalMeaningEn   String?
  culturalMeaningHy   String?
  metal               String?
  plating             String?
  enamelType          String?
  basePriceAmd        Decimal? @db.Decimal(12, 2)
  status              String?
  primaryImageUrl     String?
  notes               String?
  createdAt           DateTime @default(now())
  variants            Variant[]
}

model Variant {
  id            String   @id @default(cuid())
  sku           String   @unique
  designId      String
  design        Design   @relation(fields: [designId], references: [id])
  designName    String
  category      String?
  collection    String?
  subcollection String?
  size          String?
  color         String?
  priceAmd      Decimal  @db.Decimal(12, 2)
  priceUsd      Decimal? @db.Decimal(12, 2)
  priceEur      Decimal? @db.Decimal(12, 2)
  priceRub      Decimal? @db.Decimal(12, 2)
  costAmd       Decimal? @db.Decimal(12, 2)
  metalType        String?
  metalCostAmd     Decimal? @db.Decimal(12, 2)
  fillingMaterial  String?
  fillingCostAmd   Decimal? @db.Decimal(12, 2)
  platingType      String?
  platingCostAmd   Decimal? @db.Decimal(12, 2)
  laborCostAmd     Decimal? @db.Decimal(12, 2)
  barcode       String?  @unique
  imageUrl      String?
  weightG       Decimal? @db.Decimal(10, 3)
  reorderPoint  Int      @default(2)
  status        VariantStatus @default(ACTIVE)
  onWebsite     Boolean  @default(false)
  onEtsy        Boolean  @default(false)
  onIg          Boolean  @default(false)
  inStockists   Boolean  @default(false)
  searchBlob    String?  // denormalised lowercase search text for trigram
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt

  inventoryItems InventoryItem[]
  movements      StockMovement[]
  saleLineItems  SaleLineItem[]
  orderLineItems OrderLineItem[]

  @@index([category])
  @@index([collection])
  @@index([color])
  @@index([status])
}

model SellingPoint {
  id        String   @id @default(cuid())
  name      String   @unique
  type      SellingPointType
  address   String?
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())

  inventoryItems InventoryItem[]
  movements      StockMovement[]
  sales          Sale[]
  orders         Order[]
  cashSessions   CashDrawerSession[]
}

model InventoryItem {
  id             String   @id @default(cuid())
  variantId      String
  sellingPointId String
  quantity       Int      @default(0)
  createdById    String?
  firstSeenAt    DateTime @default(now())
  updatedAt      DateTime @updatedAt

  variant      Variant      @relation(fields: [variantId], references: [id])
  sellingPoint SellingPoint @relation(fields: [sellingPointId], references: [id])
  createdBy    User?        @relation("InventoryCreatedBy", fields: [createdById], references: [id])

  @@unique([variantId, sellingPointId])
  @@index([sellingPointId])
}

model StockMovement {
  id             String   @id @default(cuid())
  variantId      String
  sellingPointId String
  type           StockMovementType
  qtyDelta       Int
  unitPriceAmd   Decimal? @db.Decimal(12, 2)
  performedById  String
  saleId         String?
  note           String?
  createdAt      DateTime @default(now())

  variant      Variant      @relation(fields: [variantId], references: [id])
  sellingPoint SellingPoint @relation(fields: [sellingPointId], references: [id])
  performedBy  User         @relation("MovementBy", fields: [performedById], references: [id])
  sale         Sale?        @relation(fields: [saleId], references: [id])

  @@index([variantId])
  @@index([sellingPointId, createdAt])
  @@index([type, createdAt])
}

model Customer {
  id          String  @id @default(cuid())
  fullName    String
  email       String?
  phone       String?
  notes       String?
  isLoyalty   Boolean @default(true)
  createdById String?
  createdBy   User?   @relation("CustomerCreatedBy", fields: [createdById], references: [id])
  createdAt   DateTime @default(now())

  sales  Sale[]
  orders Order[]

  @@index([phone])
  @@index([email])
}

model Sale {
  id             String   @id @default(cuid())
  saleNumber     String   @unique
  sellingPointId String
  customerId     String?
  soldById       String
  subtotalAmd    Decimal  @db.Decimal(12, 2)
  totalAmd       Decimal  @db.Decimal(12, 2)
  currency       String   @default("AMD")
  paymentMethod  PaymentMethod? @default(CASH)
  createdAt      DateTime @default(now())

  sellingPoint SellingPoint @relation(fields: [sellingPointId], references: [id])
  customer     Customer?    @relation(fields: [customerId], references: [id])
  soldBy       User         @relation("SoldBy", fields: [soldById], references: [id])
  lineItems    SaleLineItem[]
  movements    StockMovement[]

  @@index([sellingPointId, createdAt])
  @@index([soldById, createdAt])
}

model SaleLineItem {
  id           String  @id @default(cuid())
  saleId       String
  variantId    String
  quantity     Int
  unitPriceAmd Decimal @db.Decimal(12, 2)
  lineTotalAmd Decimal @db.Decimal(12, 2)

  sale    Sale    @relation(fields: [saleId], references: [id], onDelete: Cascade)
  variant Variant @relation(fields: [variantId], references: [id])
}

model Order {
  id             String       @id @default(cuid())
  orderNumber    String       @unique
  createdById    String
  customerId     String?
  customerName   String?
  address        String?
  note           String?
  deadline       DateTime?
  channel        OrderChannel
  sellingPointId String?
  status         OrderStatus  @default(NEW)
  createdAt      DateTime     @default(now())

  createdBy    User          @relation("OrderCreatedBy", fields: [createdById], references: [id])
  customer     Customer?     @relation(fields: [customerId], references: [id])
  sellingPoint SellingPoint? @relation(fields: [sellingPointId], references: [id])
  lineItems    OrderLineItem[]
}

model OrderLineItem {
  id          String  @id @default(cuid())
  orderId     String
  variantId   String?
  quantity    Int
  description String?

  metalType        String?
  metalCostAmd     Decimal? @db.Decimal(12, 2)
  fillingMaterial  String?
  fillingCostAmd   Decimal? @db.Decimal(12, 2)
  platingType      String?
  platingCostAmd   Decimal? @db.Decimal(12, 2)
  laborCostAmd     Decimal? @db.Decimal(12, 2)
  unitPriceAmd     Decimal? @db.Decimal(12, 2)

  order   Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  variant Variant? @relation(fields: [variantId], references: [id])
}

model CashDrawerSession {
  id                  String   @id @default(cuid())
  sellingPointId      String
  userId              String
  openingCountAmd     Decimal  @db.Decimal(12, 2)
  openingById         String
  openingAt           DateTime @default(now())
  closingCountAmd     Decimal? @db.Decimal(12, 2)
  closingById         String?
  closingAt           DateTime?
  expectedClosingAmd  Decimal? @db.Decimal(12, 2)
  discrepancyAmd      Decimal? @db.Decimal(12, 2)
  priorClosingAmd     Decimal? @db.Decimal(12, 2)
  handoverMismatch    Boolean  @default(false)
  status              CashSessionStatus @default(OPEN)
  note                String?

  sellingPoint SellingPoint @relation(fields: [sellingPointId], references: [id])
  user         User         @relation("ShiftUser", fields: [userId], references: [id])
  openingBy    User         @relation("CashOpenBy", fields: [openingById], references: [id])
  closingBy    User?        @relation("CashCloseBy", fields: [closingById], references: [id])

  @@index([sellingPointId, status])
  @@index([userId, openingAt])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String?
  user      User?    @relation(fields: [userId], references: [id])
  type      NotificationType
  title     String
  body      String?
  relatedId String?
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())

  @@index([userId, isRead, createdAt])
}

model FxRate {
  id            String   @id @default(cuid())
  currency      String   @unique
  ratePerAmd    Decimal  @db.Decimal(18, 8)
  updatedAt     DateTime @updatedAt
}

model Counter {
  id      String @id
  current Int    @default(0)
}
